fixed-hints-overflow

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -347,7 +347,7 @@ body {
 
       .hint-item {
         font-size: 1rem;
-        margin: 0 1.5em;
+        margin: 0 0.8em;
       }
     }
 
